fix stiky navbar and hid overflow in messages component

--- a/src/Components/MainScreen/MainScreen.module.css
+++ b/src/Components/MainScreen/MainScreen.module.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     height: 100%;
     width: 100%;
-    overflow:hidden;
     position: absolute;
     margin: 0;
     padding: 0;
