--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -8,7 +8,6 @@
     align-content: center;
     align-items: center; 
     vertical-align: middle;
-    position: sticky;
     top: -1px;
     
 }
